# cali

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  convert.sh  run.sh  test-win.sh  test.sh
.github/workflows/: main.yml
data/: test-bodoni.ppm  test-cm.ppm  test-garamond.ppm  test-noto-sans.ppm  test-ubuntu.ppm
doc/: bezier.txt
src/: cali.f90  demo.f90  lodepng_wrapper.cpp  main.f90  test.f90  utf.f90  utf8.f90
